--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
                     <h4 class="footer-title">About 6 Gents</h4>
-                    <p>A competitive Rocket League matchmaking system for Discord communities. Play custom matches, track your stats, and climb the leaderboard!</p>
+                    <p>The casual competitive matchmaking system for the banditos server!</p>
                 </div>
 
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
