--- a/templates/rank_check.html
+++ b/templates/rank_check.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="rank-body">
                             <h5 class="rank-title">Rank A</h5>
-                            <p class="rank-description">Grand Champion II & Above</p>
+                            <p class="rank-description">Grand Champion I & Above</p>
                             <p class="rank-mmr">MMR Range: 1600+</p>
                             <span class="badge bg-danger">Rank A Role</span>
                         </div>
